public class Hospedagem extends ItemPacote {
    public String nomeHotel;
    public String endereco;
}