import java.math.BigDecimal;

public class ItemPacote {
    public BigDecimal preco;
}