public class LocacaoVeiculo extends ItemPacote {
    public String marca;
    public String modelo;
}
