public class Localidade {
    public String descricao;
}