import java.util.List;

public class Pacote {
    public String descricao;
    public Localidade localidade;
    public ItemPacote[] items;
}