public class TransladoAereo extends ItemPacote {
    public String companhiaAerea;
    public String numeroVoo;
}